--- a/University/css/blocks/header/header.css
+++ b/University/css/blocks/header/header.css
@@ -57,13 +57,14 @@ body {
 
 .start {
   opacity: 0;
-  display: none; }
+  -webkit-transition: opacity .5s ease;
+  -o-transition: opacity .5s ease;
+  transition: opacity .5s ease; }
 
 .preloader {
   z-index: -1;
   position: absolute;
   width: 100%;
-  height: 100vh;
   top: 0;
   bottom: 0;
   left: 0;
