--- a/University/css/blocks/main/level/level.css
+++ b/University/css/blocks/main/level/level.css
@@ -25,139 +25,74 @@
   font-style: normal;
   font-display: swap; }
 
-@font-face {
-  font-family: Source Serif;
-  font-family: 'RobotoLight';
-  src: url("../fonts/RobotoLight/RobotoLight.eot");
-  src: url("../fonts/RobotoLight/RobotoLight.eot?iefix") format("eot"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"), url("../fonts/RobotoLight/RobotoLight.svg#webfont") format("svg");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap; }
-
-@font-face {
-  font-family: Source Serif;
-  font-family: 'RobotoBold';
-  src: url("../fonts/RobotoBold/RobotoBold.eot");
-  src: url("../fonts/RobotoBold/RobotoBold.eot?iefix") format("eot"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"), url("../fonts/RobotoBold/RobotoBold.svg#webfont") format("svg");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap; }
-
-@font-face {
-  font-family: Source Serif;
-  font-family: 'RobotoRegular';
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot?iefix") format("eot"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"), url("../fonts/RobotoRegular/RobotoRegular.svg#webfont") format("svg");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap; }
-
-.level__item {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
-  -webkit-transition: all .2s ease;
-  -o-transition: all .2s ease;
-  transition: all .2s ease; }
-
-.level__item:hover {
-  -webkit-animation: 2s bgHover linear infinite;
-          animation: 2s bgHover linear infinite; }
-
-@-webkit-keyframes bgHover {
-  0% {
-    background-color: white; }
-  50% {
-    background-color: rgba(255, 255, 255, 0.1); }
-  100% {
-    background-color: white; } }
-
-@keyframes bgHover {
-  0% {
-    background-color: white; }
-  50% {
-    background-color: rgba(255, 255, 255, 0.1); }
-  100% {
-    background-color: white; } }
-
 .level {
   width: 100%;
-  min-height: 300px; }
+  height: auto; }
   .level a {
     outline: none; }
   .level h2 {
-    font-family: "RobotoBold"; }
+    font-family: "RobotoBold";
+    text-align: center; }
   .level__item {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 25px 7px;
     width: 250px;
-    height: 250px;
-    margin: 0 auto; }
-  .level__image {
-    width: 150px;
-    height: 150px; }
-  .level p {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    text-align: center;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+    margin-bottom: 20px; }
+  .level__item:hover {
+    -webkit-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.75);
+            box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.75); }
+  .level__course {
     font-family: "RobotoBold"; }
+  .level__desc {
+    font-family: "RobotoRegular"; }
   .level__wrapper {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; }
+  .level__link {
+    color: #d80b4a;
+    text-decoration: underline; }
 
-@media (min-width: 320px) {
-  .level h2 {
-    font-size: 30px;
-    text-align: center; }
-  .level__wrapper {
-    width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 300px;
-    margin: 0 auto; }
-  .level__image {
-    margin: 0 auto;
-    display: block; }
-  .level__item {
-    margin-top: 30px; }
-  .level p {
-    text-align: center;
-    font-size: 20px; } }
-
-@media (min-width: 768px) {
+@media (min-width: 319px) {
   .level {
-    height: 350px;
-    padding: 20px 0px; }
+    height: 950px; }
     .level h2 {
-      font-size: 35px; }
+      margin: 20px 0px; }
     .level__wrapper {
-      width: 700px;
-      -webkit-box-orient: horizontal;
+      -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
-      -webkit-flex-direction: row;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -webkit-justify-content: space-around;
-          -ms-flex-pack: distribute;
-              justify-content: space-around; } }
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 @media (min-width: 768px) {
+  .level__wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+  .level__item {
+    width: 350px; } }
+
+@media (min-width: 1200px) {
   .level {
-    height: 400px; }
-    .level h2 {
-      font-size: 45px; }
+    height: 340px; }
     .level__wrapper {
-      width: 1200px; } }
+      width: 1100px;
+      margin: 0 auto; } }
