--- a/University/css/main.css
+++ b/University/css/main.css
@@ -110,28 +110,31 @@ body {
   position: relative; }
 
 .start {
+  display: none;
   opacity: 0;
   -webkit-transition: opacity .5s ease;
   -o-transition: opacity .5s ease;
   transition: opacity .5s ease; }
 
 .preloader {
-  z-index: -1;
   position: absolute;
   width: 100%;
+  height: 100vh;
+  z-index: 100;
   top: 0;
-  bottom: 0;
+  bottom: -1000;
   left: 0;
   right: 0;
-  background-color: #323030;
+  background: red;
   -webkit-animation: 5s bg linear infinite;
           animation: 5s bg linear infinite; }
   .preloader__wrapper {
+    position: relative;
     width: 300px;
-    margin: 0 auto;
+    margin: 50% auto 0;
+    border: 1px solid red;
     height: 400px;
-    border: 1px solid transparent;
-    position: relative; }
+    border: 1px solid transparent; }
   .preloader__circle {
     position: absolute;
     z-index: 999999;
@@ -771,6 +774,7 @@ body {
   font-display: swap; }
 
 .block-match {
+  position: relative;
   -webkit-border-radius: 10px 0px 0px 10px;
           border-radius: 10px 0px 0px 10px;
   min-width: 300px;
@@ -797,42 +801,29 @@ body {
     text-transform: uppercase;
     text-align: center;
     font-family: 'RobotoBold';
-    font-size: 22px;
-    z-index: 0; }
+    font-size: 22px; }
     .block-match__main img {
       margin: 0px 230px; }
   .block-match__button {
     opacity: 0;
-    -webkit-transition: opacity .5s ease;
-    -o-transition: opacity .5s ease;
-    transition: opacity .5s ease;
-    width: 250px;
+    width: 100%;
     cursor: pointer;
     padding: 10px 0;
-    -webkit-border-radius: 15px;
-            border-radius: 15px;
-    border: 1px solid #d80b4a;
     text-align: center;
-    text-transform: uppercase;
-    font-family: "RobotoLight";
-    font-size: 18px;
-    margin: 0 auto 20px;
-    -webkit-transition: background 0.5s ease;
-    -o-transition: background 0.5s ease;
-    transition: background 0.5s ease; }
+    font-size: 25px;
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease; }
   .block-match__button:hover {
-    background-color: #d80b4a;
-    color: #fff;
-    font-family: "RobotoBold"; }
+    color: #d80b4a; }
   .block-match__desc {
+    display: none;
     cursor: pointer;
     font-family: "RobotoBold";
     color: #000;
     text-align: center;
     font-size: 22px;
-    padding: 10px 5px;
-    position: relative;
-    z-index: 0; }
+    padding: 10px 5px; }
   .block-match__inform {
     display: none;
     opacity: 1;
@@ -843,29 +834,26 @@ body {
     background-color: #e3e3e3;
     color: #000;
     padding: 10px;
-    -webkit-border-radius: 0 10px 10px 0;
-            border-radius: 0 10px 10px 0; }
+    z-index: 3;
+    -webkit-border-radius: 10px;
+            border-radius: 10px; }
   .block-match__item {
-    -webkit-transition: -webkit-transform 1s ease;
-    transition: -webkit-transform 1s ease;
-    -o-transition: transform 1s ease;
-    transition: transform 1s ease;
-    transition: transform 1s ease, -webkit-transform 1s ease;
-    display: none;
-    -webkit-transform: translateY(-1200%);
-        -ms-transform: translateY(-1200%);
-            transform: translateY(-1200%);
-    position: relative;
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
     color: #000;
+    -webkit-transform: translateY(-2000%);
+        -ms-transform: translateY(-2000%);
+            transform: translateY(-2000%);
     padding: 10px 0px;
     font-family: "RobotoRegular";
     text-align: center;
     cursor: pointer;
-    position: relative;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    position: relative; }
   .block-match:hover {
     -webkit-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.75);
             box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.75);
@@ -1456,19 +1444,27 @@ body {
             align-items: center;
     padding: 25px 7px;
     width: 250px;
+    height: auto;
     margin: 0 auto;
     text-align: center;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease;
     margin-bottom: 20px; }
+    .level__item p {
+      margin: 0;
+      padding: 0; }
+  .level__item:hover {
+    width: 400px; }
   .level__item:hover {
     -webkit-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.75);
             box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.75); }
   .level__course {
-    font-family: "RobotoBold"; }
+    font-family: "RobotoBold";
+    font-size: 20px; }
   .level__desc {
-    font-family: "RobotoRegular"; }
+    font-family: "RobotoRegular";
+    cursor: pointer; }
   .level__wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1511,6 +1507,13 @@ body {
     height: 340px; }
     .level__wrapper {
       width: 1100px;
+      margin: 0 auto; } }
+
+@media (min-width: 1500px) {
+  .level {
+    height: 340px; }
+    .level__wrapper {
+      width: 1400px;
       margin: 0 auto; } }
 
 @font-face {
@@ -1650,7 +1653,7 @@ body {
     .students__photo {
       width: 200px !important; }
     .students__comments {
-      width: 40%; }
+      width: 63%; }
     .students .owl-nav {
       position: absolute;
       top: 40%; }
